--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <!-- Footer code -->
     </footer>
 
-    <script src="JS/script.js"></script>
+    <script src="/script.js"></script>
 
 </body>
 
