--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Your Website Title</title>
+    <title>Dori Codes Project</title>
     <link rel="stylesheet" href="/styles.css" />
     <script src="https://kit.fontawesome.com/b5f6fc24cd.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/all.min.css" />
